--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -1,5 +1,12 @@
 $default-blue: #1da1f2;
 
+a {
+  align-items: center;
+  color: #fff;
+  display: flex;
+  text-decoration: none;
+}
+
 body {
   background-color: #15202b;
   color: #fff;
