--- a/src/components/LandingPage/styles.scss
+++ b/src/components/LandingPage/styles.scss
@@ -1,3 +1,35 @@
 .LandingPage {
-  //
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  justify-content: center;
+  position: relative;
+  width: 100vw;
+
+  .Button {
+    width: 100%;
+  }
+
+  footer {
+    bottom: 0;
+    font-size: .75rem;
+    padding: 1rem;
+    position: absolute;
+    right: 0;
+
+    span {
+      display: inline-block;
+      transform: scale(-1, 1);
+    }
+  }
+}
+
+.LandingPage__logo {
+  align-items: center;
+  display: flex;
+
+  h1 {
+    margin-left: .5rem;
+  }
 }
