WIP styling components, added Select component

--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -10,11 +10,15 @@ a {
 body {
   background-color: #15202b;
   color: #fff;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'PT Sans', sans-serif;
   margin: 0;
 }
 
 h1,
 h2 {
+  margin: 0;
+}
+
+p {
   margin: 0;
 }
