--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -4,9 +4,10 @@
   display: flex;
   height: 3rem;
   justify-content: space-between;
-  padding: 0 1rem;
+  width: 100%;
 
   a {
+    margin-left: 1rem;
     text-decoration: none;
   }
 
@@ -17,5 +18,10 @@
 
   .Button {
     background-color: transparent;
+    margin-right: 1rem;
+
+    &:hover {
+      text-decoration: underline;
+    }
   }
 }
