--- a/src/components/Button/styles.scss
+++ b/src/components/Button/styles.scss
@@ -2,6 +2,7 @@
 
 %button {
   border: none;
+  border-radius: 2px;
   font-size: 1rem;
   height: 2.5rem;
   margin: 0;
@@ -19,6 +20,17 @@
   &:hover {
     background-color: darken($blue-base, 25%);
     cursor: pointer;
+  }
+}
+
+.Button--small {
+  @extend %button;
+  background-color: #fff;
+  font-size: .875rem;
+  margin: .5rem 0;
+
+  svg {
+    margin-right: .5rem;
   }
 }
 
