--- a/src/components/Dashboard/styles.scss
+++ b/src/components/Dashboard/styles.scss
@@ -83,8 +83,8 @@
     font-size: 1.75rem;
     padding: 0 1rem;
 
-    &:first-of-type {
-      margin-bottom: 1rem;
+    &:last-of-type {
+      margin-top: 1rem;
     }
   }
 
