--- a/src/components/Dashboard/styles.scss
+++ b/src/components/Dashboard/styles.scss
@@ -35,9 +35,8 @@
 }
 
 %following {
-  justify-content: flex-start;
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-rows: 1fr 1fr;
   height: calc(100vh - 3rem - 1px);
   width: 100vw;
 }
@@ -56,8 +55,10 @@
 
 .Following__icon {
   @extend %flex-center;
+  align-self: center;
   animation: rotation 1s infinite linear;
   margin-bottom: 1rem;
+  width: 20%;
 }
 
 @keyframes rotation {
@@ -72,7 +73,7 @@
 .Following__intro {
   border-bottom: 1px solid rgba(#fff, 0.25);
   box-shadow: 0 0.5rem 0 0 rgba(#000, 0.15);
-  padding: 2rem 0;
+  padding-top: 2rem;
 
   > div {
     position: relative;
@@ -82,7 +83,7 @@
     font-size: 1.75rem;
     padding: 0 1rem;
 
-    &:last-of-type {
+    + p {
       margin-top: 1rem;
     }
   }
@@ -92,9 +93,13 @@
   }
 }
 
+.Following__list {
+  @extend %scrollbar;
+  overflow-y: scroll;
+}
+
 .Following--loading {
   @extend %following;
-  width: 50%;
 }
 
 .Following__text {
@@ -130,9 +135,11 @@
   margin-left: 0.5rem;
 }
 
-.Following__list {
-  @extend %scrollbar;
-  overflow-y: scroll;
+.Following__wrapper {
+  display: flex;
+  flex-direction: column;
+  height: inherit;
+  justify-content: center;
 }
 
 .Friend {
