added Netlify badge to LandingPage, tweaked Footer styles, set default timeframe to "week", added animated GIF to README

--- a/src/assets/styles/styles.scss
+++ b/src/assets/styles/styles.scss
@@ -1,16 +1,13 @@
 $default-blue: #1da1f2;
 
 a {
-  align-items: center;
   color: #fff;
-  display: flex;
-  text-decoration: none;
 }
 
 body {
   background-color: #15202b;
   color: #fff;
-  font-family: 'PT Sans', sans-serif;
+  font-family: "PT Sans", sans-serif;
   height: inherit;
   margin: 0;
   width: inherit;
