--- a/src/components/Footer/styles.scss
+++ b/src/components/Footer/styles.scss
@@ -1,5 +1,9 @@
 .Footer {
-  padding: 1rem;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 0 1rem;
   text-align: center;
 
   a {
