--- a/src/components/LandingPage/styles.scss
+++ b/src/components/LandingPage/styles.scss
@@ -37,6 +37,7 @@
   flex-direction: column;
   font-size: 1.25rem;
   font-weight: normal;
+  justify-content: center;
   overflow-y: scroll;
   text-align: initial;
   padding: 0 5%;
