added support for absolute imports across project

--- a/src/components/Dashboard/styles.scss
+++ b/src/components/Dashboard/styles.scss
@@ -1,6 +1,6 @@
-@import "../../assets/styles/colors.scss";
-@import "../../assets/styles/keyframes.scss";
-@import "../../assets/styles/mixins.scss";
+@import "assets/styles/_colors";
+@import "assets/styles/_keyframes";
+@import "assets/styles/_mixins";
 
 /**
  * Dashboard
