--- a/src/components/Dashboard/styles.scss
+++ b/src/components/Dashboard/styles.scss
@@ -55,13 +55,13 @@
 
 .Following__icon--broom {
   @extend %flex-center;
+
+  animation: broom 3s ease-in-out infinite alternate;
   border: 1px solid #fff;
   border-radius: 50%;
   height: 5rem;
   margin-bottom: 1rem;
   width: 5rem;
-
-  animation: broom 3s ease-in-out infinite alternate;
 
   svg {
     transform: rotate(-45deg);
@@ -69,10 +69,9 @@
 }
 
 .Following__header {
+  align-items: center;
   border-bottom: 1px solid rgba(#fff, 0.25);
   box-shadow: 0 0.5rem 0 0 rgba(#000, 0.15);
-
-  align-items: center;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -112,23 +111,6 @@
   }
 }
 
-.Following--loading {
-  @extend %following;
-}
-
-.Following__text {
-  margin: 0 2rem;
-
-  p {
-    text-align: center;
-
-    &:first-of-type {
-      font-size: 1.25rem;
-      margin-bottom: 0.5rem;
-    }
-  }
-}
-
 .Following__timeframe {
   color: #fff;
   display: inline-block;
@@ -147,13 +129,6 @@
   font-size: 1.25em;
   font-weight: bolder;
   margin-left: 0.5rem;
-}
-
-.Following__wrapper {
-  display: flex;
-  flex-direction: column;
-  height: inherit;
-  justify-content: center;
 }
 
 /**
@@ -196,17 +171,16 @@
   }
 
   .Button {
+    -webkit-appearance: none;
     border: none;
     color: #fff;
     height: 2rem;
+    min-width: 5rem;
     position: absolute;
-    top: 0.5rem;
     right: 0.5rem;
-    width: 5rem;
-    -webkit-appearance: none;
+    top: 0.5rem;
 
     &:hover {
-      background-color: #000;
       cursor: pointer;
     }
   }
@@ -231,4 +205,32 @@
 
 .Friend__id {
   margin-bottom: 0.5rem;
+}
+
+/**
+ * Loading
+ */
+
+.Loading {
+  @extend %following;
+}
+
+.Loading__text {
+  margin: 0 2rem;
+
+  p {
+    text-align: center;
+
+    &:first-of-type {
+      font-size: 1.25rem;
+      margin-bottom: 0.5rem;
+    }
+  }
+}
+
+.Loading__wrapper {
+  display: flex;
+  flex-direction: column;
+  height: inherit;
+  justify-content: center;
 }
