--- a/src/components/Dashboard/styles.scss
+++ b/src/components/Dashboard/styles.scss
@@ -56,7 +56,7 @@
 .Following__icon--broom {
   @extend %flex-center;
 
-  animation: broom 3s ease-in-out infinite alternate;
+  //animation: broom 3s ease-in-out infinite alternate;
   border: 1px solid #fff;
   border-radius: 50%;
   height: 5rem;
