refactor: replace Flow with TypeScript

--- a/src/components/views/Dashboard/styles.scss
+++ b/src/components/views/Dashboard/styles.scss
@@ -1,6 +1,6 @@
-@import "assets/styles/_colors";
-@import "assets/styles/_keyframes";
-@import "assets/styles/_mixins";
+@import "../../../assets/styles/colors";
+@import "../../../assets/styles/keyframes";
+@import "../../../assets/styles/mixins";
 
 /**
  * Dashboard
